2012-10-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.c (MagickGetImagePage): Need to use 'image'
	rather than 'images' in order to work with iterator.
	(MagickSetImagePage): Need to use 'image'
	rather than 'images' in order to work with iterator.

2012-10-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (TranslateTextEx): Fix bug with input string
	read overrun if the input string ends with a single '%'.  This
	sometimes caused random heap data to be added to the output string
	until another null character is reached.  A simple work-around
	without this fix is to use "%%" rather than "%".  Fixes
	SourceForge bug 3580219 "strange results with '%' in Annotate()".

2012-10-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.c (MagickSetImagePage): New method to support
	setting the image page size and offsets.
	(MagickGetImagePage): New method to support getting image page
	size and offsets.

2012-10-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Report fatal error if doing modules build and
	libltdl is not found.

2012-10-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* ltdl: Libltdl is no longer bundled.  Libltdl must be previously
	installed on the system in order to build the modules
	configuration.

2012-10-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/index.rst: Update top index page for 1.3.17 release.

	* NEWS.txt: Update NEWS for 1.3.17 release.

	* version.sh: Update shared library versioning for 1.3.17 release.

	* coders/jnx.c: Fix format string compilation warnings.  Remove
	MS-DOS line terminations.

	* configure.ac: Module loading is now only supported by the
	modules build and not just because shared libraries are enabled.
	This means that libltdl is only depended upon by the modules
	build.  Sometime in the future, libltdl will no longer be bundled
	in the GraphicsMagick source tree.
