@@ -1,3 +1,9 @@
+2012-11-04  Glenn Randers-Pehrson  <glennrp@simplesystems.org> 
+
+	* coders/png.c (ReadOnePNGImage): Let libpng unpack all sub-8-bit
+	pixels (see change of 2012-08-31 which lets libpng unpack sub-8-bit
+	palette images; this also lets libpng unpack the grayscale images).
+
 2012-10-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* wand/magick_wand.c (MagickGetImagePage): Need to use 'image'
